test/1.4/errors/T_EDVAR.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

inline method im(inline i) {
    {
        // No error here
        local int i;
    }

    /// ERROR EDVAR
    local int i;
}

method m(int i) {
    {
        // No error here
        local int i;
    }
    /// ERROR EDVAR
    local int i;
}

method init() {
    m(0);
    im(0);
}
